--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>FREE LEARNING BOOKS BETA</h1>
+        <h1>FREE LEARNING BOOKS ALPHA</h1>
     </header>
 
     <main>
